--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "express-simple-starter",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "curl": "^0.1.4",
+    "dotenv": "^17.3.1",
+    "express": "^4.18.2",
+    "mysql2": "^3.17.2"
   }
 }
